# Polybot

./: .gitignore  Cargo.toml  LICENSE  README.md  deploy.sh  homebot.service  restart.sh
bot_commands_macro/: Cargo.toml
bot_commands_macro/src/: lib.rs
src/: bot_commands.rs  main.rs  server.rs  types.rs  utils.rs
src/lib/: bot.rs  bot_commands.rs  lib.rs  llm.rs  openmeteo.rs  opentmeteo.rs  plant.rs  polybot.rs  server.rs  telegram_ops.rs  telegrambot.rs  types.rs  utils.rs
src/lib/services/: coinmarketcap.rs  llm.rs  mod.rs  openmeteo.rs
src/lib/telegram/: bot.rs  types.rs
src/lib/telegrambot/: bot.rs  bot_commands.rs  mod.rs  types.rs
