[package]
name = "homebot"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = "debuginfo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["multipart", "stream", "blocking"] }
tokio = { version = "1.30.0", features = ["full"] }
serde_json = "1.0"
anyhow = "1.0"
serde = { version = "1.0.2", features = ["derive"] }
actix-web = { version = "4", features = ["openssl"] }
openssl = { version = "0.10", features = ["vendored"] }
toml = "0.8.8"
serde_with = { version = "3.0.0", features = ["chrono"] }
chrono = "0.4.26"
async-trait = "0.1.72"
rand = "0.8.5"
actix-service = "2.0.2"
actix-ip-filter = "0.3.1"
tokio-util = { version = "0.7.8", features = ["codec"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-actix-web = "0.7.6"
actix-server = "2.2.0"
socket2 = "0.5.3"
futures = "0.3.28"
llm-chain = "0.13.0"
llm-chain-openai = "0.13.0"
bot_commands_macro = { path = "./bot_commands_macro" }
enum_dispatch = "0.3.12"
llm-chain-qdrant = "0.13.0"
qdrant-client = "1.4.0"
html2text = "0.11.0"
influxdb = { version = "0.7.1", features = ["derive"] }
rumqttc = "0.23.0"

[[bin]]
name = "homebot"
path = "src/main.rs"

[lib]
name = "polybot"
path = "src/lib/lib.rs"

[dev-dependencies]
actix-rt = "2.8.0"
httpmock = "0.7.0"
tempfile = "3.7.1"

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
xargo = false
